--- a/libs/eo/legal/assets/terms/da-trial.html
+++ b/libs/eo/legal/assets/terms/da-trial.html
@@ -171,7 +171,7 @@ limitations under the License.
   </section>
 
   <section id="section10">
-    <h2>Trial Vilkår</h2>
+    <h2>Trial Vilkær</h2>
     <ol>
       <li>Trial Vilkår</li>
       <li>Trial Vilkår</li>
