update the terms

--- a/libs/eo/legal/assets/service-provider-terms/en.html
+++ b/libs/eo/legal/assets/service-provider-terms/en.html
@@ -199,6 +199,12 @@ limitations under the License.
         charge of Service Providers for their use of Energy Track & Trace Denmark will happen after
         notice in accordance with article 7 on changes in the terms and conditions.
       </li>
+      <li>
+        Energy Track & Trace Denmark is currently intended exclusively for testing purposes in
+        connection with the issuance of granular certificates. Consequently, certificates
+        and reports issued via Energy Track & Trace Denmark cannot be used as official documentation
+        of the origin of electricity production.
+      </li>
     </ol>
   </section>
 
