--- a/libs/eo/legal/assets/terms/en.html
+++ b/libs/eo/legal/assets/terms/en.html
@@ -208,6 +208,12 @@ limitations under the License.
         of origin, or any other type of certificate regarding the environmental attributes of the
         energy, for the relevant measuring point.
       </li>
+      <li>
+        Energy Track & Trace Denmark is currently intended exclusively for testing purposes in
+        connection with the issuance of granular certificates. Consequently, certificates
+        and reports issued via Energy Track & Trace Denmark cannot be used as official documentation
+        of the origin of electricity production.
+      </li>
     </ol>
   </section>
 
