--- a/libs/eo/legal/assets/terms/da.html
+++ b/libs/eo/legal/assets/terms/da.html
@@ -54,9 +54,9 @@ limitations under the License.
     <h2>1. Baggrund for Energy Track & Trace Denmark</h2>
     <p>
       Med Energy Track & Trace Denmark ønsker Energinet DataHub A/S at flytte produktion af grøn
-      strøm og forbruget tættere sammen, så det sikres, at strømmen i elnettet er grønt, når den
-      bruges. Baseret på data fra DataHub-systemet udstedes der produktionscertifikater fra
-      godkendte energikilder samt forbrugscertifikater hvert 15. minut.
+      strøm og forbruget tættere sammen, så det sikres, at strømmen i elnettet er grønt,
+      når den bruges. Baseret på data fra DataHub-systemet udstedes der produktionscertifikater
+      fra god-kendte energikilder samt forbrugscertifikater hvert 15. minut.
     </p>
   </section>
 
@@ -201,6 +201,12 @@ limitations under the License.
         søges om udstedelse af andre oprindelsesgarantier, eller nogen anden form for certifikat
         vedrørende de miljømæssige egenskaber af energien, for det pågældende målepunkt. for
         produktionsenheder.
+      </li>
+      <li>
+        Energy Track & Trace Denmark er på nuværende tidspunkt udelukkende til testformål i relation
+        til udstedelse af granulære certifikater. Certifikater, herunder markedsrapporter,
+        udstedt via Energy Track & Trace Denmark kan derfor ikke anvendes som officiel dokumentation
+        for elproduktionens oprindelse.
       </li>
     </ol>
   </section>
