update the terms (#4499)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/libs/eo/legal/assets/service-provider-terms/da.html
+++ b/libs/eo/legal/assets/service-provider-terms/da.html
@@ -200,6 +200,12 @@ limitations under the License.
         Track & Trace Denmark eller de ydelser som Service Provider tilbyder til Brugere. Ændringer
         herved kan varsles i overensstemmelse med pkt. 7 om ændringer i vilkår.
       </li>
+      <li>
+        Energy Track & Trace Denmark er på nuværende tidspunkt udelukkende til testformål i relation
+        til udstedelse af granulære certifikater. Certifikater, herunder markedsrapporter, udstedt
+        via Energy Track & Trace Denmark kan derfor ikke anvendes som officiel dokumentation for
+        elproduktionens oprindelse.
+      </li>
     </ol>
   </section>
 
