Update danish ett terms

--- a/libs/eo/legal/assets/terms/da.html
+++ b/libs/eo/legal/assets/terms/da.html
@@ -56,7 +56,7 @@ limitations under the License.
       Med Energy Track & Trace Denmark ønsker Energinet DataHub A/S at flytte produktion af grøn
       strøm og forbruget tættere sammen, så det sikres, at strømmen i elnettet er grønt, når den
       bruges. Baseret på data fra DataHub-systemet udstedes der produktionscertifikater fra
-      god-kendte energikilder samt forbrugscertifikater hvert 15. minut.
+      godkendte energikilder samt forbrugscertifikater hvert 15. minut.
     </p>
   </section>
 
