test of iframe solution

--- a/apps/dh/app-dh/src/index.html
+++ b/apps/dh/app-dh/src/index.html
@@ -24,10 +24,10 @@ limitations under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00847c" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00847c" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="theme-color" content="#00898a" />
     <!--- End Favicon -->
