--- a/apps/dh/app-dh-wrapper/src/index.html
+++ b/apps/dh/app-dh-wrapper/src/index.html
@@ -22,6 +22,8 @@ limitations under the License.
     <title>DataHub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <!-- MSAL Browser library for authentication checking -->
+    <script src="https://alcdn.msauth.net/browser/2.38.3/js/msal-browser.min.js"></script>
     <style>
       html,
       body {
@@ -36,36 +38,107 @@ limitations under the License.
         height: 100%;
         display: block;
       }
+      #loading {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        font-family: system-ui, -apple-system, sans-serif;
+        color: #666;
+      }
     </style>
+  </head>
+  <body>
+    <div id="loading">Loading...</div>
+    <iframe id="app-frame" style="display: none" title="DataHub Application"></iframe>
+
     <script>
-      // Check if this is an auth redirect from Azure B2C
-      // B2C can return auth response in query params OR hash fragment
-      (function () {
+      (async function () {
+        // Check if this is an auth redirect from Azure B2C
+        // B2C can return auth response in query params OR hash fragment
         var queryParams = new URLSearchParams(window.location.search);
         var hashParams = new URLSearchParams(window.location.hash.substring(1));
 
         var isQueryAuthRedirect =
-          queryParams.has("code") || queryParams.has("error") || queryParams.has("state");
+          queryParams.has('code') || queryParams.has('error') || queryParams.has('state');
         var isHashAuthRedirect =
-          hashParams.has("code") || hashParams.has("error") || hashParams.has("state");
+          hashParams.has('code') || hashParams.has('error') || hashParams.has('state');
 
+        // If this is an auth redirect, pass it to app.html for processing
         if (isQueryAuthRedirect) {
-          // Pass through query params to app.html
-          window.location.replace("app.html" + window.location.search);
-        } else if (isHashAuthRedirect) {
-          // Pass through hash fragment to app.html
-          window.location.replace("app.html" + window.location.hash);
+          window.location.replace('app.html' + window.location.search);
+          return;
+        }
+        if (isHashAuthRedirect) {
+          window.location.replace('app.html' + window.location.hash);
+          return;
+        }
+
+        // Load B2C configuration
+        var b2cConfig;
+        try {
+          var response = await fetch('dh-b2c-environment.json');
+          if (!response.ok) {
+            response = await fetch('dh-b2c-environment.local.json');
+          }
+          b2cConfig = await response.json();
+        } catch (e) {
+          console.error('Failed to load B2C config:', e);
+          // Redirect to app.html as fallback
+          window.location.replace('app.html');
+          return;
+        }
+
+        // Initialize MSAL
+        var msalConfig = {
+          auth: {
+            clientId: b2cConfig.clientId,
+            authority: b2cConfig.authority,
+            knownAuthorities: b2cConfig.knownAuthorities,
+            redirectUri: '/',
+          },
+          cache: {
+            cacheLocation: 'sessionStorage',
+          },
+        };
+
+        var msalInstance = new msal.PublicClientApplication(msalConfig);
+
+        try {
+          await msalInstance.initialize();
+
+          // Check if user is authenticated
+          var accounts = msalInstance.getAllAccounts();
+
+          if (accounts.length === 0) {
+            // Not authenticated - redirect to app.html for login
+            // This will be a full-page login, not in iframe
+            window.location.replace('app.html');
+            return;
+          }
+
+          // User is authenticated - show the iframe
+          document.getElementById('loading').style.display = 'none';
+          var iframe = document.getElementById('app-frame');
+          iframe.src = 'app.html';
+          iframe.style.display = 'block';
+        } catch (e) {
+          console.error('MSAL error:', e);
+          // Redirect to app.html as fallback
+          window.location.replace('app.html');
         }
       })();
-    </script>
-  </head>
-  <body>
-    <iframe id="app-frame" src="app.html" title="DataHub Application"></iframe>
-    <script>
+
       // Sync page title from iframe
-      window.addEventListener("message", function (event) {
-        if (event.origin === window.location.origin && event.data.type === "TITLE_UPDATE") {
+      window.addEventListener('message', function (event) {
+        if (event.origin === window.location.origin && event.data.type === 'TITLE_UPDATE') {
           document.title = event.data.title;
+        }
+
+        // Handle re-authentication requests from iframe
+        if (event.origin === window.location.origin && event.data.type === 'AUTH_REQUIRED') {
+          // Break out to app.html for re-authentication
+          window.location.replace('app.html');
         }
       });
     </script>
